report max-width on mobile fix

--- a/src/css/Article.css
+++ b/src/css/Article.css
@@ -200,9 +200,9 @@ article h5 {
 }
 @media screen and (max-width: 700px) {
   .report-photo {
-    width: 100% !important;
-    max-width: 300px;
-    max-height: none !important;
+    max-width: 100% !important;
+    /* max-width: 300px; */
+    /* max-height: none !important; */
   }
 }
 
